Decoding accepts objects instead of classes to support arrays